website: add new ad

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -11,10 +11,12 @@ prepend header
   - var promo = 'active'
 
   .psa
-    b Advertise Here: &nbsp;
-    span Want to advertise your website? &nbsp;
-    a(href="mailto:ifedapoolarewaju@gmail.com")
-     b Contact us
+    b Sponsored:&nbsp;
+    span Want free Instagram followers? Use Socialfollow® for &nbsp;
+    b FREE &nbsp;
+    span and grow your Instagram today! &nbsp;
+    a.btn.btn-primary(href="https://socialfollow.co/?utm_source=igdm&utm_medium=banner", target="_blank")
+     b Grow your Instagram NOW
 
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
