website: update to latest version

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -25,15 +25,15 @@ append navigation
     .download.col-md-auto.mt-5
       h5
         | Download the latest 
-        span v2.6.0
+        span v2.7.0
       div.mt-2(class="btn-group" role="group" aria-label="Download buttons")
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.6.5/IGdm-Setup-2.6.5.exe')
+        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.7.0/IGdm.Setup.2.7.0.exe')
           i.mdi.mdi-windows
           span.ml-2 Windows
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.6.5/IGdm-2.6.5.dmg')
+        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.7.0/IGdm-2.7.0.dmg')
           i.mdi.mdi-apple 
           span.ml-2 macOS
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.6.5/IGdm-2.6.5-x86_64.AppImage')
+        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.7.0/IGdm.2.7.0.AppImage')
           i.mdi.mdi-linux
           span.ml-2 Linux
     a.downloadCount.mt-3.d-block(href='https://twitter.com/igdmApps/status/1137337076167401472', target='_blank') Over 5,000,000+ Downloads!
