--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -14,7 +14,18 @@ prepend header
 block content
   section.changelog
     :markdown-it
-      ## Newest v2.6.0 Features
+      ## Newest v2.7.0 Features
+      - Disable drag and drop
+      - Use group and chat titles
+      - Render Message As ActionLog
+      - Add support for audio media
+      - Render message reactions (message likes)
+      - Render GIFs
+      - Less confusing "send 'seen' receipts" indicator
+
+      [View full list](https://github.com/ifedapoolarewaju/igdm/blob/master/CHANGELOG.md#270--2019-08-21)
+
+      ## v2.6.0 Features
       - Fix notification on windows
       - Friendly image upload UX
       - Chat message performance improvement
