--- a/browser/views/checkpoint.pug
+++ b/browser/views/checkpoint.pug
@@ -7,7 +7,7 @@ block content
   .container.cardBox.pb-5.pt-3.pt-sm-5
     form.pageCard.mx-auto.p-4.p-sm-5
       .clearfix.welcomeBox
-        span.d-block.text-center Please enter the verification code sent to your e-mail address
+        span.d-block.text-center Please enter the verification code sent to your e-mail address or phone no.
       .input-group.loginInputs.mt-4
         input.form-control.code(type='text', name='code', required='true', placeholder='Code')
       button.loginButton.mt-3.btn.btn-primary(type='submit') Submit Code
