--- a/docs-src/igstories.pug
+++ b/docs-src/igstories.pug
@@ -29,13 +29,13 @@ append navigation
         | Download the latest 
         span 1.0.0
       div.mt-2(class="btn-group" role="group" aria-label="Download buttons")
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igstories/releases/download/v1.0.2/IGStories.Setup.1.0.2.exe')
+        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igstories/releases/download/v1.0.3/IGStories-Setup-1.0.3.exe')
           i.mdi.mdi-windows
           span.ml-2 Windows
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igstories/releases/download/v1.0.2/IGStories-1.0.2.dmg')
+        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igstories/releases/download/v1.0.3/IGStories-1.0.3.dmg')
           i.mdi.mdi-apple 
           span.ml-2 macOS
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igstories/releases/download/v1.0.2/IGStories.1.0.2.AppImage')
+        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igstories/releases/download/v1.0.3/IGStories-1.0.3-x86_64.AppImage')
           i.mdi.mdi-linux
           span.ml-2 Linux
 
