--- a/browser/views/checkpoint.pug
+++ b/browser/views/checkpoint.pug
@@ -12,4 +12,4 @@ block content
         input.form-control.code(type='text', name='code', required='true', placeholder='Code')
       button.loginButton.mt-3.btn.btn-primary(type='submit') Submit Code
       span#error.d-block.errorMessage.text-center.mt-3
-  script(type='text/javascript', src='js/popup.js')
+  script(type='text/javascript', src='js/otp.js')
