website: update app version

--- a/docs-src/blog/igdm-on-windows-linux.pug
+++ b/docs-src/blog/igdm-on-windows-linux.pug
@@ -51,6 +51,8 @@ block blogContent
     [here](https://unix.stackexchange.com/questions/379134/how-run-appimage-with-left-click-mouse-in-deepin/379353#379353)
     
     ### Unable to Login due to 2-Factor Authentication
+    #### UPDATE: 2-Factor Authentication is now supported since [v2.8.0](https://github.com/igdmapps/igdm/releases/tag/v2.8.0). Big thanks to the Open Source contributors who helped make this happen!
+
     Although this issue is not specific to any particular platform, it is a common issue.
     
     As of version 2.3.1, IG:dm does not have support for 
@@ -59,7 +61,9 @@ block blogContent
     
     #### How to fix this
     
-    A current workaround for this would be to:
+    If possible, install the version that supports 2-Factor, i.e [v2.8.0](https://github.com/igdmapps/igdm/releases/tag/v2.8.0) or higher.
+
+    Other workarounds for this would be to:
     - Disable two-step authentication on Instagram and then login to IG:dm
     - After logging in to IG:dm, re-enable two-step authentication.
     
