--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -24,16 +24,18 @@ append navigation
     h3.text-center.col-12.col-md-8.m-auto Continue your Instagram direct messages from your phone to your desktop.
     .download.col-md-auto.mt-5
       h5
+        | 2-Factor Authentication is now supported!
+      h5
         | Download the latest 
-        span v2.7.0
+        span v2.8.0
       div.mt-2(class="btn-group" role="group" aria-label="Download buttons")
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.7.1/IGdm-Setup-2.7.1.exe')
+        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v2.8.0/IGdm-Setup-2.8.0.exe')
           i.mdi.mdi-windows
           span.ml-2 Windows
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.7.1/IGdm-2.7.1.dmg')
+        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v2.8.0/IGdm-2.8.0.dmg')
           i.mdi.mdi-apple 
           span.ml-2 macOS
-        a.btn.btn-outline-light(role="button" href='https://github.com/ifedapoolarewaju/igdm/releases/download/v2.7.1/IGdm-2.7.1-x86_64.AppImage')
+        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v2.8.0/IGdm-2.8.0-x86_64.AppImage')
           i.mdi.mdi-linux
           span.ml-2 Linux
     a.downloadCount.mt-3.d-block(href='https://twitter.com/igdmApps/status/1137337076167401472', target='_blank') Over 5,000,000+ Downloads!
