website: add changelog

--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -14,6 +14,12 @@ prepend header
 block content
   section.changelog
     :markdown-it
+      ## Newest v2.8.0 Features
+      - 2FA Support
+      - Better ux for chatList
+
+      [View full list](https://github.com/igdmapps/igdm/blob/master/CHANGELOG.md#280--2019-10-31)
+
       ## Newest v2.7.0 Features
       - Disable drag and drop
       - Use group and chat titles
