--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -57,6 +57,13 @@ block content
         | View chat images
         img.mt-3.img-fluid(src='img/viewimage.gif')
   section.issues.mt-5.text-center
+    h2 Want more features?
+    h4
+      a.btn.btn-primary(href='https://pro.igdm.me', target='_blank')
+        | Try &nbsp;
+        b IGdm Pro
+
+  section.issues.mt-5.text-center
     h2 Issues running IG:dm on your computer?
     span
       | Please see 
@@ -73,12 +80,6 @@ block content
     | You can also donate via BITCOIN to the following Bitcoin address.
     .donations
       code 3NM9EubVwdvNm9qiTgLC8DHsRtTHvoyaD6
-
-  section.issues.mt-5.text-center
-    h2 Want more features?
-    span
-      | Try &nbsp;
-      a(href='https://pro.igdm.me', target='_blank') IGdm Pro
 
 append footer
   script.
