--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -42,6 +42,14 @@ html(lang='en')
       link(rel='stylesheet',          href='/css/global.css')
   body
     block header
+      block psa
+        .psa.lykdat
+          b Sponsored:&nbsp;
+          span Don't know where to buy the outfits you see in Photos? Use &nbsp;
+          b LykDat &nbsp;
+          span to find them! &nbsp;
+          a.btn.btn-primary(href="https://lykdat.com/?utm_source=igdm&utm_medium=banner", target="_blank")
+            b Shop the look NOW
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
@@ -87,3 +95,16 @@ html(lang='en')
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-96853108-1', 'auto');
         ga('send', 'pageview');
+
+        document.querySelectorAll('.psa.lykdat a').forEach(function (el){
+          el.addEventListener('click', function(event) {
+            event.preventDefault()
+            ga('send', 'event', {
+              eventCategory: 'Lykdat Sponsored',
+              eventAction: 'click',
+              eventLabel: el.href,
+              transport: 'beacon'
+            });
+            window.open(el.href , '_blank');
+          })
+        })
