--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -10,6 +10,15 @@ prepend header
   - var navtype = 'transparent navbar-dark'
   - var promo = 'active'
 
+block psa
+  .psa.home
+    b Sponsored:&nbsp;
+    span Want free Instagram followers? Use Socialfollow® for &nbsp;
+    b FREE &nbsp;
+    span and grow your Instagram today! &nbsp;
+    a.btn.btn-primary(href="https://socialfollow.co/?utm_source=igdm&utm_medium=banner", target="_blank")
+     b Grow your Instagram NOW
+
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
     h1.text-center.display-1.col-md-auto IG:dm
