--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -40,6 +40,15 @@ append navigation
     a.downloadCount.mt-3.d-block(href='https://twitter.com/igdmApps/status/1137337076167401472', target='_blank') Over 5,000,000+ Downloads!
 
 block content
+  .text-white.row.justify-content-center
+    .psa.lykdat.col-8.bg-secondary.p-2
+      b Sponsored:&nbsp;
+      span Don't know where to buy the outfits you see in Photos? Use &nbsp;
+      b LykDat &nbsp;
+      span to find them! &nbsp;
+      a.btn.btn-primary(href="https://lykdat.com/?utm_source=igdm_home&utm_medium=banner", target="_blank")
+        b TRY IT NOW
+
   section.features.mt-5
     h2.text-center.mb-5 Features
     .row.mt-3.justify-content-center
