website: change lykdat phrase

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -43,9 +43,8 @@ block content
   .text-white.row.justify-content-center
     .psa.lykdat.col-8.bg-secondary.p-2
       b Sponsored:&nbsp;
-      span Don't know where to buy the outfits you see in Photos? Use &nbsp;
+      span Shop for fashion by searching with images on&nbsp;
       b LykDat &nbsp;
-      span to find them! &nbsp;
       a.btn.btn-primary(href="https://lykdat.com/?utm_source=igdm_home&utm_medium=banner", target="_blank")
         b TRY IT NOW
 
