update website sponsor banner

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -13,10 +13,10 @@ prepend header
 block psa
   .psa.home
     b Sponsored:&nbsp;
-    span Want free Instagram followers? Use Socialfollow® for &nbsp;
+    span Want more Instagram followers? Try Upleap for &nbsp;
     b FREE &nbsp;
     span and grow your Instagram today! &nbsp;
-    a.btn.btn-primary(href="https://socialfollow.co/?utm_source=igdm&utm_medium=banner", target="_blank")
+    a.btn.btn-primary(href="https://upleap.com/?utm_source=igdm&utm_medium=banner", target="_blank")
      b Grow your Instagram NOW
 
 append navigation
