--- a/browser/css/app.css
+++ b/browser/css/app.css
@@ -579,6 +579,10 @@ EMOJIS
 CAROUSEL
 ******************************/
 
+.carousel {
+  position: inherit;
+}
+
 .carousel-left, .carousel-right {
   position: absolute;
   padding: 40px;
