edit close icon position

--- a/browser/css/app.css
+++ b/browser/css/app.css
@@ -320,6 +320,9 @@ button, button:focus {
 .viewer button.close {
   background: transparent;
   opacity: 0.5;
+  position: fixed;
+  top: 5px;
+  right: 10px;
 }
 
 .viewer .post-caption {
