--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -45,11 +45,10 @@ html(lang='en')
       block psa
         .psa.lykdat
           b Sponsored:&nbsp;
-          span Don't know where to buy the outfits you see in Photos? Use &nbsp;
+          span Shop for fashion by searching with images on &nbsp;
           b LykDat &nbsp;
-          span to find them! &nbsp;
           a.btn.btn-primary(href="https://lykdat.com/?utm_source=igdm&utm_medium=banner", target="_blank")
-            b Shop the look NOW
+            b TRY IT NOW
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
