--- a/browser/css/app.css
+++ b/browser/css/app.css
@@ -142,6 +142,22 @@ button, button:focus {
   flex: 1 1;
 }
 
+.chat-list li .username > b {
+  float: left;
+}
+
+.chat-list li .username > span.outward,
+.chat-list li .username > span.inward {
+  float: left;
+  clear: left;
+}
+
+.chat-list li .username .date {
+  float: right;
+  font-style: italic;
+  opacity: 0.5;
+}
+
 .chat-list li.notification:after {
   content: ' ';
   position: absolute;
