change IG:dm -> IGdm

--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -1,7 +1,7 @@
 extends _layout
 
 prepend titleDeterminer
-  - var pageDesc = 'The official IG:dm changelog summaries. See the full changelogs on GitHub.'
+  - var pageDesc = 'The official IGdm changelog summaries. See the full changelogs on GitHub.'
   - var pageTitle = 'Changelog'
 
 append head
