--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -12,7 +12,7 @@ prepend header
 
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
-    h1.text-center.display-1.col-md-auto IG:dm
+    h1.text-center.display-1.col-md-auto IGdm
     h3.text-center.col-12.col-md-8.m-auto Continue your Instagram direct messages from your phone to your desktop.
     .download.col-md-auto.mt-5
       h5
@@ -82,15 +82,15 @@ block content
 
   section.row.mt-5.justify-content-center
     .col-md-5
-      h4 Issues running IG:dm on your computer?
+      h4 Issues running IGdm on your computer?
       span
         | Please see 
         a(href='http://igdm.me/blog/igdm-on-windows-linux', target='_blank') common issues and fixes 
-        | for running IG:dm on your desktop.
+        | for running IGdm on your desktop.
     .col-md-1
     .col-md-5
       h4 Donations
-      | IG:dm
+      | IGdm
       | is an open source project that can be used for free by anyone, donations
       | and incentives are wholeheartedly welcome.
       a.btn.btn-link.btn-outline-light(role="button" href='http://paypal.me/SolomonOmojola' target="_blank") Donate via PayPal
