--- a/docs-src/changelog.pug
+++ b/docs-src/changelog.pug
@@ -14,13 +14,26 @@ prepend header
 block content
   section.changelog
     :markdown-it
-      ## Newest v2.8.0 Features
+      ## Newest 3.0.0 Features
+
+      - Add option to save image
+      - Add option to auto launch IGdm on start up
+      - Add option to delete conversation
+      - Make auto-update optional
+      - Indicate when users are "active" or "last seen"
+      - Fix 2FA
+      - Fix image upload
+      - Upload audio, and video files
+
+      [View full list](https://github.com/igdmapps/igdm/blob/master/CHANGELOG.md#300--2020-04-29)
+
+      ## v2.8.0 Features
       - 2FA Support
       - Better ux for chatList
 
       [View full list](https://github.com/igdmapps/igdm/blob/master/CHANGELOG.md#280--2019-10-31)
 
-      ## Newest v2.7.0 Features
+      ## v2.7.0 Features
       - Disable drag and drop
       - Use group and chat titles
       - Render Message As ActionLog
