website: add search console verification metatag

--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -27,6 +27,7 @@ html(lang='en')
       meta(property='og:locale', content='en_US')
       meta(property='og:site_name', content=title)
       meta(name='author', content='IGdm Contributors')
+      meta(name="google-site-verification", content="GrOnvnDKAG67pwq793EKdH_X5ewQFj6uyegGjzVrkb8")
 
       meta(name='viewport',           content='width=device-width, initial-scale=1, user-scalable=no')
       meta(name='description',        content=description)
