--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -1,7 +1,7 @@
 extends _layout
 
 prepend titleDeterminer
-  - var pageDesc = 'A desktop application for Instagram direct messages. Download for Windows, Mac and Linux'
+  - var pageDesc = 'IGdm is a desktop application for Instagram direct messages. Download for Windows, Mac and Linux'
 
 append head
   link(rel='stylesheet', href='/css/index.css')
