--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -45,11 +45,11 @@ html(lang='en')
     block header
       block psa
         .psa.lykdat
-          b Sponsored:&nbsp;
-          span Shop for fashion by searching with images on &nbsp;
-          b LykDat &nbsp;
-          a.btn.btn-primary(href="https://lykdat.com/?utm_source=igdm&utm_medium=banner", target="_blank")
-            b TRY IT NOW
+          b Advert:&nbsp;
+          span Check out this service to &nbsp;
+          a(href="https://megafamous.com/buy-instagram-likes", target="_blank")
+            b Buy Instagram Likes
+          span &nbsp;. Delivered instantly!
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
