website: fix ad typo

--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -49,7 +49,7 @@ html(lang='en')
           span Check out this service to &nbsp;
           a(href="https://megafamous.com/buy-instagram-likes", target="_blank")
             b Buy Instagram Likes
-          span &nbsp;. Delivered instantly!
+          span . Delivered instantly!
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
