website: remove ad banner from other website pages

--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -10,6 +10,14 @@ prepend header
   - var navtype = 'transparent navbar-dark'
   - var promo = 'active'
 
+block psa
+  .psa.home
+    b Advert:&nbsp;
+    span Check out this service to &nbsp;
+    a(href="https://megafamous.com/buy-instagram-likes", target="_blank")
+      b Buy Instagram Likes
+    span . Delivered instantly!
+
 append navigation
   .container.promo.pb-5.pt-2.mb-5.text-center
     h1.text-center.display-1.col-md-auto IGdm
