--- a/docs-src/index.pug
+++ b/docs-src/index.pug
@@ -27,13 +27,13 @@ append navigation
         | Download the latest 
         span v3.0.0
       div.mt-2(class="btn-group" role="group" aria-label="Download buttons")
-        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v3.0.3/IGdm-Setup-3.0.3.exe')
+        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v3.0.4/IGdm-Setup-3.0.4.exe')
           i.mdi.mdi-windows
           span.ml-2 Windows
-        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v3.0.3/IGdm-3.0.3.dmg')
+        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v3.0.4/IGdm-3.0.4.dmg')
           i.mdi.mdi-apple 
           span.ml-2 macOS
-        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v3.0.3/IGdm-3.0.3-x86_64.AppImage')
+        a.btn.btn-outline-light(role="button" href='https://github.com/igdmapps/igdm/releases/download/v3.0.4/IGdm-3.0.4.AppImage')
           i.mdi.mdi-linux
           span.ml-2 Linux
     a.downloadCount.mt-3.d-block(href='https://twitter.com/igdmApps/status/1137337076167401472', target='_blank') Over 5,000,000+ Downloads!
