add PSA for ecommerce service

--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -44,6 +44,10 @@ html(lang='en')
   body
     block header
       block psa
+        .psa.home
+          span Boost your eCommerce store with the best &nbsp;
+          a(href="https://solutions.lykdat.com", target="_blank")
+            b Product Recommendation Engine
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
