add correct google analytics class

--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -44,7 +44,7 @@ html(lang='en')
   body
     block header
       block psa
-        .psa.home
+        .psa.lykdat
           span Boost your eCommerce store with the best &nbsp;
           a(href="https://solutions.lykdat.com", target="_blank")
             b Product Recommendation Engine
