--- a/docs-src/_layout.pug
+++ b/docs-src/_layout.pug
@@ -45,9 +45,9 @@ html(lang='en')
     block header
       block psa
         .psa.lykdat
-          span Boost your eCommerce store with the best &nbsp;
-          a(href="https://solutions.lykdat.com", target="_blank")
-            b Product Recommendation Engine
+          span Check out this document conveter app to &nbsp;
+          a(href="https://docconverter.app/", target="_blank")
+            b Convert PDF to Word (docx)
       block fork
         a.forkus(href='https://github.com/igdmapps/igdm', target='_blank')
           img(src='/img/github-fork-us.svg', alt='Fork us on GitHub')
