website: add blog post for how to send bulk messages

--- a/docs-src/blog/index.pug
+++ b/docs-src/blog/index.pug
@@ -6,7 +6,12 @@ prepend titleDeterminer
 
 block blogContent
   h1 BLOG POSTS
-    
-  h3
+  br
+  h4
     a(href="https://igdm.me/blog/igdm-on-windows-linux") Getting IGdm running on Windows and Linux
   p There are some known issues to get IGdm up and running on Windows, learn how to get it up and running.
+  br
+  br
+  h4
+    a(href="https://igdm.me/blog/how-to-send-bulk-messages-on-instagram") How To Send Bulk Messages On Instagram
+  p Learn how to send bulk messages on Instagram with ease using IGdm Pro app. Say goodbye to manual messaging and hello to efficiency. Discover the advantages and steps to get started.
