--- a/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
+++ b/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
@@ -34,7 +34,7 @@ block blogContent
     offers **message scheduling**, **quick replies**, **message reminders**, **conversation labelling**
     and a host of other productivity boosting features.
 
-    To install the IGdm Pro app, simply visit the website ([https://pro.igdm.me](https://pro.igdm.me)), and click
+    To install the [IGdm Pro](https://pro.igdm.me) app, simply visit the website ([https://pro.igdm.me](https://pro.igdm.me)), and click
     the download link that is applicable to your operating system. Once downloaded to your computer,
     launch the application and complete the installation process.
 
@@ -74,12 +74,12 @@ block blogContent
     &nbsp;&nbsp;
     #### IGdm Pro's Smart Approach To Instargam Bulk Messages
 
-    IGdm Pro avoids over-flooding Instagram's servers when sending Bulk Messages to various users at once. It achieves this by sending the message to each user at different intervals.
+    [IGdm Pro](https://pro.igdm.me) avoids over-flooding Instagram's servers when sending Bulk Messages to various users at once. It achieves this by sending the message to each user at different intervals.
     What this means is that, the bulk messages do not get sent at the same time. Instead, IGdm Pro picks the first user, sends the message to them, and waits for some minutes
     before proceeding to pick the second user, and so forth.
 
     &nbsp;&nbsp;
     #### Conclusion
 
-    In a world where time is precious and efficiency is key, IGdm Pro is a game-changer for Instagram users looking to streamline their business efforts on the App.
+    In a world where time is precious and efficiency is key, [IGdm Pro](https://pro.igdm.me) is a game-changer for Instagram users looking to streamline their business efforts on the App.
     Whether you're a marketer, influencer, or just an enthusiastic Instagram user, IGdm Pro is your partner for effective outreach and DM management.
