--- a/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
+++ b/docs-src/blog/how-to-send-bulk-messages-on-instagram.pug
@@ -9,7 +9,7 @@ block blogContent
     # How To Send Bulk Messages On Instagram
 
     Social Media Apps like Instagram and TikTok are quickly evolving beyond the umbrella term "Social Media Apps".
-    For many people, these apps have become works places. They are used to run primary businesses that
+    For many people, these apps have become work places. They are used to run primary businesses that
     serve as a means of livelihood.
 
     The popular use case of running businesses on Instagram has introduced an increasing demand for ways to do things more efficiently while on the App.
