--- a/docs-src/blog/index.pug
+++ b/docs-src/blog/index.pug
@@ -8,10 +8,15 @@ block blogContent
   h1 BLOG POSTS
   br
   h4
-    a(href="https://igdm.me/blog/igdm-on-windows-linux") Getting IGdm running on Windows and Linux
-  p There are some known issues to get IGdm up and running on Windows, learn how to get it up and running.
+    a(href="https://igdm.me/blog/how-to-schedule-instagram-messages") How To Schedule Instagram Messages
+  p Discover how to schedule Instagram messages effortlessly using IGdm Pro. Say goodbye to manual messaging and explore the advantages of efficient message scheduling. Follow our step-by-step guide to get started.
   br
   br
   h4
     a(href="https://igdm.me/blog/how-to-send-bulk-messages-on-instagram") How To Send Bulk Messages On Instagram
   p Learn how to send bulk messages on Instagram with ease using IGdm Pro app. Say goodbye to manual messaging and hello to efficiency. Discover the advantages and steps to get started.
+  br
+  br
+  h4
+    a(href="https://igdm.me/blog/igdm-on-windows-linux") Getting IGdm running on Windows and Linux
+  p There are some known issues to get IGdm up and running on Windows, learn how to get it up and running.
