blog: correct typos

--- a/docs-src/blog/how-to-schedule-instagram-messages.pug
+++ b/docs-src/blog/how-to-schedule-instagram-messages.pug
@@ -46,17 +46,17 @@ block blogContent
 
     ![IGdm Pro Schedule Message Icon](../img/blog/start-scheduled-msg.png)
 
-    - A Calendar pop-up will appear for you to select the date and time you would like the message to be sent. Go ahead your desired date and time, and click the "Ok" button.
+    - A Calendar pop-up will appear for you to select the date and time you would like the message to be sent. Go ahead and select your desired date and time, then click the "Ok" button.
 
     ![Schedule Date Picker](../img/blog/select-schedule-time.png)
 
-    - Once the date and time has been selected, you can now type your intended message in the message box as seen in the screenshot below. If you would like to cancel the message scheduling at any point, simply click the red button on the floating date just right about the message box.
+    - Once the date and time have been selected, you can now type your intended message in the message box as seen in the screenshot below. If you would like to cancel the message scheduling at any point, simply click the red "x" button beside the floating date, just right above the message box.
 
     ![IGdm Pro Type Message To Schedule](../img/blog/type-scheduled-msg.png)
 
     - When you're done typing your message, you can press the ENTER button to schedule the message. A success message will appear at the top of your screen (see screenshot below), informing you that your message has been scheduled.
 
-    **NOTE:** If your IGdm Pro app is not running at the time the message is due to be sent, it will only get sent the next time your launch the application.
+    **NOTE:** If your IGdm Pro app is not running at the time the message is due to be sent, it will not send the message until the next time your launch the application.
 
     ![Message Successfully Scheduled](../img/blog/success-schedule.png)
 
