blog: publish article about automated greeting messages

--- a/docs-src/blog/index.pug
+++ b/docs-src/blog/index.pug
@@ -8,6 +8,11 @@ block blogContent
   h1 BLOG POSTS
   br
   h4
+    a(href="https://igdm.me/blog/how-to-send-automated-messages-to-new-followers-on-instagram") How To Automatically Send a Greeting Message to Your New Instagram Followers
+  p Learn how you can automate instant interactions with your Instagram followers by sending them an automated greeting message shortly after they follow you.
+  br
+  br
+  h4
     a(href="https://igdm.me/blog/how-to-schedule-instagram-messages") How To Schedule Instagram Messages
   p Discover how to schedule Instagram messages effortlessly using IGdm Pro. Say goodbye to manual messaging and explore the advantages of efficient message scheduling. Follow our step-by-step guide to get started.
   br
