blog: add spacing to blog post

--- a/docs-src/blog/how-to-send-automated-messages-to-new-followers-on-instagram.pug
+++ b/docs-src/blog/how-to-send-automated-messages-to-new-followers-on-instagram.pug
@@ -56,6 +56,7 @@ block blogContent
 
     ![IGdm Pro Auto Message Toggle Switch](../img/blog/follower-auto-message-toggle.png)
 
+    &nbsp;
     Now that your auto-message is enabled, once your Instagram account gets new followers, they will receive the message within 30 minutes of following you.
 
     **NOTE:** The auto-message feature will not work if your IGdm Pro app is not running. However, once you e start the app, it will begin to work again.
