--- a/docs-src/blog/index.pug
+++ b/docs-src/blog/index.pug
@@ -8,6 +8,11 @@ block blogContent
   h1 BLOG POSTS
   br
   h4
+    a(href="https://igdm.me/blog/how-to-set-up-automatic-message-replies-on-instagram") How To Set Up Automatic Message Replies on Instagram
+  p Learn how you can automate direct message replies for your Instagram account. Auto-replies can step in during your off hours to respond to your prospects while you are away.
+  br
+  br
+  h4
     a(href="https://igdm.me/blog/how-to-send-automated-messages-to-new-followers-on-instagram") How To Automatically Send a Greeting Message to Your New Instagram Followers
   p Learn how you can automate instant interactions with your Instagram followers by sending them an automated greeting message shortly after they follow you.
   br
